--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,4 @@
-ordereddict==1.1
-argparse==1.2.1
-python-dateutil==2.2
-matplotlib==1.3.1
-nose==1.3.0
-numpy==1.8.0
-pymongo==3.3.0
-psutil>=2.0
-
+python-telegram-bot==9.0.0
+apscheduler==3.5.0
+emoji==0.4.5
+xlsxwriter==1.0.2
